--- a/Css/index.css
+++ b/Css/index.css
@@ -1,8 +1,11 @@
 /* ---- reset ---- */ body{ margin:0; font:normal 75% Arial, Helvetica, sans-serif; } canvas{ display: block; vertical-align: bottom; } /* ---- particles.js container ---- */ #particles-js{ position:absolute; width: 100%; height: 100%; background-color: #202020; background-image: url(""); background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; } /* ---- stats.js ---- */ .count-particles{ background: #000022; position: absolute; top: 48px; left: 0; width: 80px; color: #13E8E9; font-size: .8em; text-align: left; text-indent: 4px; line-height: 14px; padding-bottom: 2px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; } .js-count-particles{ font-size: 1.1em; } #stats, .count-particles{ -webkit-user-select: none; margin-top: 5px; margin-left: 5px; } #stats{ border-radius: 3px 3px 0 0; overflow: hidden; } .count-particles{ border-radius: 0 0 3px 3px; }
 #particles-js {
-    position: absolute;
-    width: 100%;
-    height: 137%;
+    position:fixed;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    z-index:0;
 }
 html{
     height: 100%;
@@ -12,7 +15,13 @@ body{
     width: 100%;
 }
 .text{
-    position: absolute;
+    position: relative;
+}
+.custom-toggler.navbar-toggler {
+    border-color: #fed136;
+}
+.custom-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 20)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 #name{
     color: #fed136;
@@ -35,9 +44,7 @@ body{
     color: #fff;
     background-color: #fed136;
     border-color: #fed136;
-    border-radius: 3px;
-    font-size: 18px;
-    padding: 20px 40px;
+    padding: 1% 2%;
 }
 #portfolio{
     color: white;
