--- a/Css/index.css
+++ b/Css/index.css
@@ -79,7 +79,10 @@ h4{
 .white{
     color: white !important;
 }
-@media (min-width:320px)  {
+nav{
+    background-color: transparent;
+}
+@media (max-width:320px)  {
 
     nav{
         background-color: black;
