--- a/Css/index.css
+++ b/Css/index.css
@@ -92,3 +92,12 @@ nav{
         font-size: 4vh;
     }
 }
+@media (min-width:480px) {
+    nav{
+        background-color: black;
+    }
+
+    #name{
+        font-size: 4vh;
+    }
+}
