--- a/Css/index.css
+++ b/Css/index.css
@@ -86,4 +86,12 @@ nav{
     nav{
         background-color: black;
     }
+
+    #cv{
+        color: #fff;
+        background-color: #fed136;
+        border-color: #fed136;
+        padding: 1.5% 2%;
+    }
+
 }
