--- a/Css/index.css
+++ b/Css/index.css
@@ -54,6 +54,7 @@ nav{
     color: white;
     font-family: Montserrat,'serif';
     font-weight: 700;
+    font-size: 50px
 }
 .circle{
     color:#FDDF00;
@@ -85,5 +86,16 @@ nav{
 @media screen and (max-width: 600px) {
     nav{
         background-color: black;
+    }
+
+    #cv{
+        color: #fff;
+        background-color: #fed136;
+        border-color: #fed136;
+        padding: 2% 2%;
+    }
+    #portfolio{
+        font-weight: 600;
+        font-size: 40px !important;
     }
 }
